--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Relatório das redes sociais</h1>
         <nav>
             <a href="index.html">Mundo</a>
-            <a href="#">Minha escola</a>
+            <a href="#">Colegio Garcez</a>
         </nav>
     </header>
     <main class="graficos-section">
@@ -19,7 +19,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Gui Lima</p>
+        <p>Desenvolvido Pela Dupla Dinamica Victor e Gustavo.C</p>
     </footer>
 </body>
 </html>
